--- a/DGPPrivateData/View/Base.lproj/Main.storyboard
+++ b/DGPPrivateData/View/Base.lproj/Main.storyboard
@@ -455,10 +455,20 @@
                             <outlet property="tableView" destination="Ozx-In-jGr" id="BoP-Kc-Tja"/>
                         </connections>
                     </view>
+                    <connections>
+                        <outlet property="searchBar" destination="scZ-7A-XzW" id="s0P-da-dX8"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="5vo-Yh-1rm" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+                <searchBar contentMode="redraw" placeholder="Search" translucent="NO" id="scZ-7A-XzW">
+                    <rect key="frame" x="0.0" y="0.0" width="414" height="56"/>
+                    <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                    <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    <color key="barTintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    <textInputTraits key="textInputTraits"/>
+                </searchBar>
             </objects>
-            <point key="canvasLocation" x="-904.34782608695662" y="119.86607142857142"/>
+            <point key="canvasLocation" x="-904" y="200"/>
         </scene>
     </scenes>
     <resources>
